--- a/index.html
+++ b/index.html
@@ -258,18 +258,16 @@ rel="stylesheet">
 
     <!-------------------------------js for toggle menu-------------------------------------------->
     <script>
-        var MenuItems = document.getElementbyId("MenuItems");
-        MenuItems.style.maxHeight= "0px" ;
+        var MenuItems = document.getElementById("MenuItems");
+MenuItems.style.maxHeight = "0px";
 
-
-        function menutoggle(){
-                   if(MenuItems.style.maxHeight== "0px"){
-                    MenuItems.style.maxHeight= "200px"
-                   }
-                   else{
-                    MenuItems.style.maxHeight= "0px"
-                   }
-        }
+function menutoggle() {
+    if (MenuItems.style.maxHeight == "0px") {
+        MenuItems.style.maxHeight = "200px";
+    } else {
+        MenuItems.style.maxHeight = "0px";
+    }
+}
     </script>
 </body>
 </html>
